@@ -1,5 +1,5 @@
-AUX create_db.sql 308 SHA256 c1d44dfbb95f4bac087050a9a5a1752dedfc931ccd6d73d9847f021bbd255e85 SHA512 acccf9958fe356df7e8b80ebe712a25accdc3dba7b00225e94c70967f5c94b84d5186e77453880d5c10848d0b36b4c2753d65e7c6f8a586dc8456fe378b45403 WHIRLPOOL 3a17d0e173189d0381e3fc67ea74c83d8a690a0a79adae1818ce33aec4421f6910c0f0220924500256cc9acc482e87bb0c0fa8ee499441373fca7e0e3a9585a0
+AUX create_db.sql 307 SHA256 6f2ae60e613b7472005c7509ff8f56bbd6376c421ff6dc3e12dd4b57f614cc23 SHA512 ef1638e711b8c947688960d12898e2653b511b2b1003ae4c41d763f0574ecf5dd03419dbe383a0e79910603a2115d8f90720e5ebae1f50856e64e46cd491cb1d WHIRLPOOL 9d471c9ed12dfd15f40ad2ebea2a4fd50442d7134c28c212871d7eb74a29c1e1ef4103661d2ced3498dc7b47c35a305205c24a3b568058529e77582332d7373d
 AUX postinstall-en.txt 467 SHA256 7e73a1ba5b3843ef228912a6400b2acb36f6c8f096d99bce845f33b0b1b1b95a SHA512 3e8d4045f19afcf73c7a3841bce9a6d44be2289fa5993f37a5058e2679e6924ed46124f58bc4a111f8f469e5cae11dd94151255a70485c695fd2de9c2fdc2613 WHIRLPOOL dea84794f7b6ef3bff22464228a6101e508b2e877cfabb6d17613e51db23d66870f62b5194b91d75ac3dfc4567fb2bc8367b6c7682df8ba12ebea8e9c3dda0b9
-EBUILD spotweb-9999.ebuild 1405 SHA256 58b692b1629bde2ee10dbbb2146567063d208741a57861f3bbcbebb123b23680 SHA512 86c4bf246cf03477ef3fec074018cc6ad2335057579ff02efff40a9da33f1a5a95942d1602c5d434e9856475512f5854218827065926efa4f15daab8a378df84 WHIRLPOOL 3b1fdaed8e660c33194b6fceef6c0b43f39ff49ef966c1441bf56e19111db81187d810ad1d30650f0e2e7431add7d4f7e73cd3c4665797158d741de2f6a09ad6
-MISC ChangeLog 389 SHA256 4dbc8075d47c82508402febd6adc5d093700f6245e61f796a003655b93f96339 SHA512 5e1dd4769cc3bdbe1c01643559823234434dc3931d16f2e624046a0c9311463f6fd9dfa98124aa7b96b61879e9d04531f1d1d9fe6c9de0cb65598944298cfdc0 WHIRLPOOL 1d80e04a8b71a2136c58aaacf41ad420289ae50e9dd1d3d52ad56b429de70cb2c3d027fd53e6b46df97366e2a41e9b3ccb4fcaf7644d384fdb50aa202a8d86ac
+EBUILD spotweb-9999.ebuild 1889 SHA256 907b7e0bb70529695a80a9da1c114980267d26cd76eb0124344c4e4b7365bc9b SHA512 4712ce84a10b26d33a91c3d7e9e6abe1f8a2a9a34fe412b1ea76566eaa7afbc7833749e424aa8da62765b9efd91acfba203c75f0c31be1d14b523a482c32e1bd WHIRLPOOL 24c0d0311c9314d5c265b417d8cc0a3da31af3a178476f1d11b623d60fc247ad448f6e45defbff0cad6b3227de660850e87ebb516d931f9da50fc383f624315e
+MISC ChangeLog 585 SHA256 e1c0e2869805f4b0a649b9e82f1778882f0e7793a5faa76719e0fd46ab1fe147 SHA512 4cfc3f4161c73dde587995fdf89c48301ef64473f44137e9c252fb06f545b8e85276000b38027b676cff0720c0af5f496ad971a349c0166845aa5ba091b27fa0 WHIRLPOOL 8b0fa69acbfb40a1d4fad5cc0a202fd1b79b24f193fe49c69678a03eef1b8aa1cd374665b338bf40121712b30b8f345f1b555c89163b85e4c8b942bbcfa8be64
 MISC metadata.xml 378 SHA256 5c096118ec0b9b826f20e017fe0a504591153440084f9c0f913109c01d5a1f23 SHA512 81e1e4e6b57627cf5ff8ae8b197843153fd81be8bb9435d4f470e31f5b5ac61442899ffdb18b69cbf87d6a33a17e033817fd9f4bfe481dd3afaa69ebef29fff2 WHIRLPOOL 46a77b1f047cc636facff99f572291666ea0ea8699f406165b7dc7332756e42fe8a94fd6d526b7751a7976b539db9179ab26116a4b3c7b2be113391930ebcd8a
