@@ -1,4 +1,4 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -19,7 +19,7 @@ KEYWORDS="~amd64 ~x86"
 IUSE=""
 
 DEPEND="virtual/mysql
-	dev-lang/php[zip,curl]
+	dev-lang/php[zip,curl,pdo]
 	virtual/httpd-php"
 RDEPEND="${DEPEND}"
 
@@ -35,17 +35,29 @@ pkg_setup() {
 
 src_install() {
 	webapp_src_preinst
+	#install htdoc files
 	insinto ${MY_HTDOCSDIR}
 	dodoc README.md
-	#install htdoc files
-	doins Mobile_Detect.php favicon.ico install.php index.php notifications.xml retrieve.php upgrade-db.php || die "failed to install"
-	doins settings.php usenetservers.xml || die "failed to install"
-	doins -r Crypt Math NNTP images js lib locales templates tests || die "failed to install"
+	# next two lines are ugly but working
+	mkdir cache
+	touch dbsettings.inc.php
+	doins check-cache.php dbsettings.inc.php favicon.ico install.php index.php migrate-cache.php migrate-cache2.php notifications.xml retrieve.php settings.php upgrade-db.php usenetservers.xml || die "failed to install"
+	doins -r cache NNTP images js lib locales templates tests vendor utils || die "failed to install"
 	webapp_postinst_txt en "${FILESDIR}"/postinstall-en.txt
 	doins "${FILESDIR}"/.htaccess || die "failed to install htaccess"
+	webapp_serverowned ${MY_HTDOCSDIR}/cache
+	webapp_serverowned ${MY_HTDOCSDIR}/dbsettings.inc.php
 	webapp_src_install
 }
 
 pkg_postinst() {
+	echo "jeg er her"
 	webapp_pkg_postinst
+}
+
+pkg_config() {
+	#defunct at the moment :(
+	echo "Creating spotweb MySQL user and spotweb database if it does not"
+	echo "already exist. You will be prompted for your MySQL root password."
+	"${EROOT}"/usr/bin/mysql -u root -p < "${FILESDIR}"/create_db.sql
 }
